--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Project to test OSS patterns",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "git-cz"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,8 @@
     "@commitlint/cli": "^9.1.2",
     "@ifood/commitlint-config": "^2.0.0",
     "@ifood/cz-conventional-changelog": "^2.0.0",
-    "husky": "^7.0.0",
-    "commitizen": "^4.1.2"
+    "commitizen": "^4.2.4",
+    "husky": "^7.0.0"
   },
   "author": "everton.tavares@ifood.com.br",
   "license": "ISC"
